# Fly-By-Wire-project

./: CMakeLists.txt  README.md
rt_tests/: DDSCORE.cpp  DDSEDFMCORE.cpp  DDSEDFSCORE.cpp  DDSMCORE.cpp  DueThreadCoreDiversi  DueThreadCoreDiversi.cpp  EDFCoreDIversi.cpp  EDFCoreDiversi  EDFCoreUguali.cpp  Eclipse IDE for C and C++ Developers - 2025-12.desktop  Telemetry.hpp  TelemetryCdrAux.hpp  TelemetryPubSubTypes.cxx  TelemetryPubSubTypes.hpp  TelemetryTypeObjectSupport.hpp  app07c_main.c  rt_edf_test  rt_scheduler  rt_scheduler.cpp
src/: .cproject  .project  FlightDisplay.cpp  FlightDisplay.hpp  MonitorDisplay.cpp  MonitorDisplay.hpp  MonitorNode.cpp  SharedMemory.hpp  Telemetry.hpp  Telemetry.idl  TelemetryCdrAux.hpp  TelemetryCdrAux.ipp  TelemetryPubSubTypes.cxx  TelemetryPubSubTypes.hpp  TelemetryTypeObjectSupport.cxx  main.cpp
